fix again 5px scrollbar bug and move legend up a bit

--- a/src/app/components/network-legend/network-legend.component.scss
+++ b/src/app/components/network-legend/network-legend.component.scss
@@ -5,6 +5,7 @@ div.legend {
   position: absolute;
   bottom: 0;
   left: 1rem;
+  bottom: 1rem;
   &.right {
     right: 0;
   }
