--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -231,7 +231,6 @@
   }
 
   .toolbar {
-    padding: 5px;
     border-top: 2px solid #d0d0d0;
 
     .field {
